Add loading animation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <span class="title">blank--space</span>
+    <body onload="load();">
+        <span class="animation"></span>
     </body>
 </html>
