--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>blank--space</title>
         <script src="script.js"></script>
         <script src="lib/jquery-3.4.1.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Bowlby+One+SC" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body onload="load();">
